_sass/partials/_schedule.scss
#section {
    margin: auto;
}

#schedule>p {
    margin: 2em auto;
    text-align: center;
    font-size: 2em;
    max-width: 700px;
    line-height: 1.5;
}

.schedule {
    margin: 2em auto;
    width: 98%;
    max-width: 900px;
    padding: 0.2em 1em;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.schedule h1 {
    font-size: 2em;
}

.schedule h2 {
    font-weight: 600;
    font-size: 1.4rem;
}

.schedule table {
    display: block;
    margin: 1em auto 4em auto;
    width: 98%;
    max-width: 800px;
    border: 1px solid #ccc;
    overflow: scroll;
}

.schedule table tr {
    border-bottom: 1px solid #ccc;
}

.schedule table tr td {
    padding: 1em 0.4em;
    font-size: 1.25em;
}

.schedule table tr td:first-child {
    width: 15ch;
}

.schedule table tr td:last-child {
    text-align: left;
}

.schedule table tr td ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: left;
}

@media screen and (max-width: 767px) {
    .schedule table {
        width: 100%;
    }
    .schedule td {
        padding: 0;
    }
}

